storybook app v1.0.1 add user profile photo upload

--- a/public/style/auth.css
+++ b/public/style/auth.css
@@ -6,7 +6,7 @@
   transform-origin: top;
   height: calc(100vh - 95px);
   box-sizing: border-box;
-  animation-name: inline-u3b860ebb;
+  animation-name: inline-u592fa218;
   animation-duration: 0.5s;
   animation-iteration-count: linear;
   display: block;
@@ -14,7 +14,7 @@
   margin: auto;
   padding: 10px; }
 
-@keyframes inline-u3b860ebb {
+@keyframes inline-u592fa218 {
   0% {
     transform: scale(0.5); }
   100% {
