--- a/views/partial/sidenav.ejs
+++ b/views/partial/sidenav.ejs
@@ -7,6 +7,7 @@
     </div>
     <li><a href="/stories">Public Story</a></li>
     <% if(user){%>
+      <li><a href="/auth/dashboard">Dashboard</a></li>
       <li><a href="/stories/admin-stories">Your Story</a></li>
       <li><a href="/stories/add-stories">Add Story</a></li>
     <% } %>
