--- a/public/style/main.css
+++ b/public/style/main.css
@@ -10,11 +10,11 @@ body {
 .flash {
   text-align: center;
   box-shadow: 3px 3px 5px 0px rgba(134, 134, 134, 0.925);
-  animation-name: inline-u97fbb685;
+  animation-name: inline-ub3ce2343;
   animation-duration: 1s;
   animation-iteration-count: linear; }
 
-@keyframes inline-u97fbb685 {
+@keyframes inline-ub3ce2343 {
   0% {
     transform: scale(1); }
   100% {
@@ -24,11 +24,11 @@ body {
   font-size: 14px;
   padding: 7px 0px;
   height: auto;
-  animation-name: inline-ued868414;
+  animation-name: inline-ucb104083;
   animation-duration: 1s;
   animation-iteration-count: linear; }
 
-@keyframes inline-ued868414 {
+@keyframes inline-ucb104083 {
   0% {
     transform: scale(0); }
   100% {
