--- a/public/style/dashboard.css
+++ b/public/style/dashboard.css
@@ -24,7 +24,8 @@
       transform: translate(-50%, 10px); }
     .dashboard .dashboard__image__container .dashboard__photo .dashboard__photo_profile {
       position: absolute;
-      width: 20%;
+      width: 160px;
+      height: 160px;
       top: 70%;
       left: 50%;
       transform: translate(-50%, 0%);
@@ -56,3 +57,12 @@
 .file {
   border: 0;
   outline: 0; }
+
+.preview_picture_container {
+  width: 160px;
+  height: 160px; }
+  .preview_picture_container .preview-image {
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    border-radius: 50%; }
